[Extensions] Guarantee API functions have unique histogram values

The histogram values for an extension function are used to report
API call activity and related metrics for extension functions. Each
extension function should have a unique histogram value, but some of
them were erroneously copy-pasted. This leads to incorrect metrics, both
with not reporting one function and over-reporting another.

Fix the instances where the histogram values were duplicated, and add a
browser test that ensures each function has a unique histogram value.

Bug: 827601

Change-Id: Ic44519ca83fe0cf4b3a1896a16232f6400b6c79d
Reviewed-on: https://chromium-review.googlesource.com/988227
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Robert Kaplow <rkaplow@chromium.org>
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548654}
Former-commit-id: fad03c4c23289ea297f8bd54c3a93826ad0f98d0