chrome/browser/extensions/api/debugger/debugger_api.h
@@ -89,7 +89,7 @@ class DebuggerSendCommandFunction : public DebuggerFunction {
 // Implements the debugger.getTargets() extension function.
 class DebuggerGetTargetsFunction : public DebuggerFunction {
  public:
-  DECLARE_EXTENSION_FUNCTION("debugger.getTargets", DEBUGGER_ATTACH)
+  DECLARE_EXTENSION_FUNCTION("debugger.getTargets", DEBUGGER_GETTARGETS)
 
   DebuggerGetTargetsFunction();
 
